# snake_game_py

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  mypy.ini  pyproject.toml  requirements.txt  ruff.toml  snake.py
.github/workflows/: docs.yml
docs/: index.html  search.js  snake.html
