[tool.poetry]
name = "snake_game_py"
version = "0.1.0"
description = ""
authors = ["Gallay David <david.gallay.96@gmail.com>"]
packages = [
    {include = "snake.py", from="."},
]
[tool.poetry.scripts]
snake_game_py = "snake:run_game"

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
